Add hero section to index.html

--- a/index.html
+++ b/index.html
@@ -19,5 +19,14 @@
             <div><a href="#">header link one</a></div>
         </div>
     </div>
+    <div class="hero">
+        <div class="hero-text"><h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the mait title. It's a smaller font and the color is lower contrast</p>
+    <button>Sign up</button>
+    </div>
+        <div class="hero-image">
+            <p>this is a place for an image</p>
+        </div>
+    </div>
 </body>
 </html>
