--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </div>
     </div>
     <div class="hero">
-        <div class="hero-text"><h1>This website is awesome</h1>
+        <div class="hero-text hero-item"><h1>This website is awesome</h1>
         <p>This website has some subtext that goes here under the mait title. It's a smaller font and the color is lower contrast</p>
     <button>Sign up</button>
     </div>
-        <div class="hero-image">
+        <div class="hero-image hero-item">
             <p>this is a place for an image</p>
         </div>
     </div>
