Add info section to index.html + tweak header style in style.css

--- a/index.html
+++ b/index.html
@@ -28,5 +28,24 @@
             <p>this is a place for an image</p>
         </div>
     </div>
+        <h2>Some random information.</h2>
+        <div class="info">
+            <div>
+                <div class="info-image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <div class="info-image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <div class="info-image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div>
+                <div class="info-image"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
 </body>
 </html>
