--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 space, or maybe people will actually read it. 
                 Who knows? All I know is that it looks nice.
             </p>
-            <p>-Thor, God of Thunder</p>
+            <p class="author">-Thor, God of Thunder</p>
         </div>
 </body>
 </html>
