Add cta section to index.html

--- a/index.html
+++ b/index.html
@@ -55,5 +55,11 @@
             </p>
             <p class="author">-Thor, God of Thunder</p>
         </div>
+        <div class="cta">
+            <p><b>Call to action! It's time!</b><br>
+            Sign up for our product by clicking that
+        button right over there!</p>
+        <button class="cta-button">Sign up</button>
+        </div>
 </body>
 </html>
