Add style to cta section

--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
             </p>
             <p class="author">-Thor, God of Thunder</p>
         </div>
+        <div class="cta-box">
         <div class="cta">
-            <p><b>Call to action! It's time!</b><br>
+            <p class="cta-item"><b>Call to action! It's time!</b><br>
             Sign up for our product by clicking that
         button right over there!</p>
-        <button class="cta-button">Sign up</button>
-        </div>
+        <div class="cta-item"><button class="cta-button" >Sign up</button></div>
+        </div> </div>
 </body>
 </html>
