Add footer to index.html

--- a/index.html
+++ b/index.html
@@ -62,5 +62,8 @@
         button right over there!</p>
         <div class="cta-item"><button class="cta-button" >Sign up</button></div>
         </div> </div>
-</body>
+        <div class="footer">
+            <p>Copyright © Sajad Mahyaei 2022</p>
+        </div>
+    </body>
 </html>
